--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "raven": "^2.6.4",
     "sequelize": "^4.42.0",
     "socket.io": "^2.0.2",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "^3.1.13",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.1.1",
